syntax = "proto3";

package filtering;

service FilteringService {

  // gRPC for filtering candidates based on experience and position
  rpc FilterCandidates (FilterRequest) returns (stream Candidate);

  // RPC for deleting a candidate
  rpc DeleteCandidate (DeleteRequest) returns (DeleteResponse);
}

message FilterRequest {
  int32 minExperience = 1;
  int32 maxExperience = 2;
  string position = 3;
}

message Candidate {
  string _id = 1; 
  string name = 2; 
  string email = 3;
  string position = 4; 
  int32 experience = 5; 
  string pathCV = 6;
}

// Message for the request to delete a candidate
message DeleteRequest {
  string id = 1; 
}

// Message for the response status of an operation
message DeleteResponse {
  string message = 1;
  string id = 2;
}
