syntax = "proto3";

package hiring;

service HiringService {
  // Simple RPC
  rpc AddCandidate (CandidateRequest) returns (AddResponse);

  // Server Streaming RPC
  rpc GetAllCandidates (Empty) returns (stream Candidate);

  // Update candidate
  rpc UpdateCandidate (UpdateRequest) returns (UpdateResponse);

  // Delete candidate
  rpc DeleteCandidate (DeleteRequest) returns (DeleteResponse);
}

message CandidateRequest {
  string name = 1;
  string email = 2;
  string position = 3;
  int32 experience = 4;
  string pathCV = 5;
}

message UpdateRequest {
  string _id = 1;
  string name = 2;
  string email = 3;
  string position = 4;
  int32 experience = 5;
  string pathCV = 6;
}

message Candidate {
  string _id = 1;
  string name = 2;
  string email = 3;
  string position = 4;
  int32 experience = 5;
  string pathCV = 6;
}

message AddResponse {
  int32 status = 1; 
  string message = 2;
  Candidate candidate = 3;
}

message UpdateResponse {
  int32 status = 1; 
  string message = 2;
  Candidate candidate = 3;
}

message DeleteRequest {
  string id = 1;
}

message DeleteResponse{
  string message = 1;
  string id = 2;
}

message Empty {}
